Refactor Components to Use New AssignmentStore

--- a/src/content/assignments/assignment0/Assignment0.mdx
+++ b/src/content/assignments/assignment0/Assignment0.mdx
@@ -1,7 +1,5 @@
-import {
-    AssignmentDueDateNew,
-    AssignmentLinkNew,
-} from 'src/components/CourseInformation';
+import { AssignmentDueText } from "src/components/AssignmentDueText";
+import { AssignmentCanvasLink } from "src/components/AssignmentCanvasLink";
 
 # Assignment 0: Introduction Slide
 
@@ -22,11 +20,11 @@ For example, your slide might be similar to our introduction slides in the first
 
 ### Submission
 
-<p><AssignmentDueDateNew assignmentTitle='0 - Introduction Slide' /></p>
+<p><AssignmentDueText milestone={'assignment0'} /></p>
 
 One page in PDF format. Submit via Canvas here:
 
-<p><AssignmentLinkNew assignmentTitle='0 - Introduction Slide' /></p>
+<p><AssignmentCanvasLink milestone={'assignment0'} /></p>
 
 ### Grading
 
