--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -13,9 +13,8 @@ import {
 } from 'src/components/ProjectMilestoneSamples';
 
 import {
-    AssignmentDueDate,
-    AssignmentLink,
-} from 'src/components/CourseInformation';
+    AssignmentCanvasLink
+} from "src/components/AssignmentCanvasLink";
 
 import ClarityAndPresentationReference from 'src/content/assignments/ClarityAndPresentationReference.mdx'
 import ContributionStatementReference from 'src/content/assignments/ContributionStatementReference.mdx'
@@ -45,7 +44,7 @@ This is a group assignment, consisting of six milestones.
   * ASSIGNMENT 3A
   *
   */}
-<CollapseProjectMilestone heading='3a: Paper Prototype' dueDateName='dueDateAssignment3a'>
+<CollapseProjectMilestone milestone={'assignment3a'}>
 
 The goal of this milestone is to develop an initial paper prototype that will begin to allow testing of your design.
 
@@ -72,7 +71,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><AssignmentLink linkName='linkCanvasAssignment3a' /></p>
+<p><AssignmentCanvasLink milestone={'assignment3a'} /></p>
 
 #### In Class
 
@@ -97,7 +96,7 @@ This milestone will be graded on a scale of __12 points__:
   * ASSIGNMENT 3B
   *
   */}
-<CollapseProjectMilestone heading='3b: Heuristic Evaluation' dueDateName='dueDateAssignment3b'>
+<CollapseProjectMilestone milestone={'assignment3b'}>
 
 The goal of this milestone is to conduct heuristic evaluations as part of rapidly iterating on your paper prototype.
 
@@ -139,7 +138,7 @@ See samples of Assignment 3c.
   * ASSIGNMENT 3C
   *
   */}
-<CollapseProjectMilestone heading='3c: Usability Testing Check-In' dueDateName='dueDateAssignment3c'>
+<CollapseProjectMilestone milestone={'assignment3c'}>
 
 The goal of this milestone is to document changes resulting from your inspection-based analyses
 and to begin usability testing of your revised prototype with participants.
@@ -223,7 +222,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><AssignmentLink linkName='linkCanvasAssignment3c' /></p>
+<p><AssignmentCanvasLink milestone={'assignment3c'} /></p>
 
 Be prepared to discuss your iterative revision of your paper prototype.
 
@@ -252,7 +251,7 @@ This milestone will be graded on a scale of __14 points__:
   * ASSIGNMENT 3D
   *
   */}
-<CollapseProjectMilestone heading='3d: Usability Testing Review' dueDateName='dueDateAssignment3d'>
+<CollapseProjectMilestone milestone={'assignment3d'}>
 
 The goal of this milestone is to complete usability testing of your prototype with participants.
 
@@ -304,7 +303,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><AssignmentLink linkName='linkCanvasAssignment3d' /></p>
+<p><AssignmentCanvasLink milestone={'assignment3d'} /></p>
 
 #### In Class
 
@@ -332,7 +331,7 @@ This milestone will be graded on a scale of __16 points__:
   * ASSIGNMENT 3E
   *
   */}
-<CollapseProjectMilestone heading='3e: Digital Mockup' dueDateName='dueDateAssignment3e'>
+<CollapseProjectMilestone milestone={'assignment3e'}>
 
 The goal of this milestone is to transition your prototype into a digital mockup of your design.
 
@@ -401,7 +400,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><AssignmentLink linkName='linkCanvasAssignment3e' /></p>
+<p><AssignmentCanvasLink milestone={'assignment3e'} /></p>
 
 Be prepared to discuss your digital mockup and revisions that occurred in its creation.
 
@@ -424,7 +423,7 @@ This milestone will be graded on a scale of __14 points__:
   * ASSIGNMENT 3P
   *
   */}
-<CollapseProjectMilestone heading='3p: Presentation' dueDateName='dueDateAssignment3p'>
+<CollapseProjectMilestone milestone={'assignment3p'}>
 
 The goal of this milestone is to effectively communicate your design prototyping in a presentation.
 
@@ -507,7 +506,7 @@ But you are ultimately responsible for your presentation.
 
 Submit via Canvas here:
 
-<p><AssignmentLink linkName='linkCanvasAssignment3p' /></p>
+<p><AssignmentCanvasLink milestone={'assignment3p'} /></p>
 
 ### Grading
 
