--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -498,7 +498,12 @@ These should be done on paper, then scanned (i.e., do not create or recreate the
 They should clearly indicate the functionality of the design and what the interface will be like,
 conveying the major aspects of the design in enough detail that
 a person not in your group can understand how the design supports each task.
+They should establish motivation and satisfaction,
+show insight into the task/design, and include one or more characters and settings.
+The storyboards should not include any unneeded frames or unneeded details across multiple frames.
 As needed, add descriptions that explicitly reference the storyboard, add more sketches, or annotate them in multiple colors.
+
+
 
 #### Submission
 
