Add InformalDrawingTool component

--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -19,6 +19,7 @@ import {
 import ClarityAndPresentationReference from 'src/content/assignments/ClarityAndPresentationReference.mdx'
 import ContributionStatementReference from 'src/content/assignments/ContributionStatementReference.mdx'
 import GroupAssignment from 'src/content/assignments/GroupAssignment.mdx'
+import InformalDrawingTool from 'src/content/assignments/InformalDrawingTool.mdx'
 import ParticipantAnonymity from 'src/content/assignments/ParticipantAnonymity.mdx'
 
 import path2pPresentationStaffForm from '../../../assets/assignments/2p-presentation-staff-form.pdf';
@@ -413,9 +414,7 @@ You will now brainstorm and sketch three very different __initial designs__ for 
  - These should be rough sketches (i.e., not digital mockups),
    including illustrations of their relations (e.g., arrows showing transitions and relationships).
 
-We recommend you do these on paper, then capture a high-quality image (e.g., avoid shadows).
-You may alternatively use an informal drawing tool,
-but be sure you do not adopt a tool that will start to embed unnecessary assumptions or decisions in your design process.
+<InformalDrawingTool />
 
 The purpose of these sketches is to explore the design space before you lock yourself into a single design.
 They must demonstrate significant consideration of substantially different approaches to your problem.
@@ -507,9 +506,7 @@ storyboards should not include any unneeded frames or unnecessary details across
 As needed, ensure clarity of your story through captions,
 other brief descriptions, selective use of color, or other techniques.
 
-We recommend you do these on paper, then capture a high-quality image (e.g., avoid shadows).
-You may alternatively use an informal drawing tool,
-but be sure you do not adopt a tool that will start to embed unnecessary assumptions or decisions in your design process.
+<InformalDrawingTool />
 
 #### Submission
 
