Add InformalDrawingTool component to 3a

--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -20,6 +20,7 @@ import ClarityAndPresentationReference from 'src/content/assignments/ClarityAndP
 import ContributionStatementReference from 'src/content/assignments/ContributionStatementReference.mdx'
 import GroupAssignment from 'src/content/assignments/GroupAssignment.mdx'
 import ParticipantAnonymity from 'src/content/assignments/ParticipantAnonymity.mdx'
+import InformalDrawingTool from 'src/content/assignments/InformalDrawingTool.mdx'
 
 import path3bNielsenHeuristics from '../../../assets/assignments/3b-nielsen-heuristics.pdf';
 import path3pPresentationStaffForm from '../../../assets/assignments/3p-presentation-staff-form.pdf';
@@ -54,6 +55,9 @@ It should convey all critical aspects of your design, including support for test
 This prototype has been informed by your prior sketching and storyboarding.
 But it also contains more details than your prior exploratory designs.
 If necessary or appropriate, revise your tasks or scenarios based on what you learn in prototyping.
+
+<InformalDrawingTool />
+You need a physical copy of your paper prototype regardless of how you create it. So, if you use an informal drawing tool, you will have to print your paper prototype.
 
 #### Submission
 
