--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -51,19 +51,24 @@ The goal of this milestone is to develop an initial paper prototype that will be
 
 Develop a paper prototype for your design.
 It should convey all critical aspects of your design, including support for testing your two primary tasks.
-It should be complete for each task. This means it should include enough detail to show how to get from beginning to end 
-for each task in the desired/intended path and some error conditions 
-(e.g., what happens if a participant clicks the wrong button?).
-It should be an appropriate level of detail to understand all aspects of the design.
-The documentation in your report should explain how all the parts are related to each other.
-One way to do this is to include the sequence of steps in your prototype.
+The prototype should be complete for each task,
+including enough detail to show how to complete each step in the task.
+This should include the desired / expected / intended path, but also likely error conditions
+(e.g., what happens if some participant input is invalid?).
+The prototype should be at an appropriate level of detail,
+supporting understanding of all critical aspects of your design and the context of the your primary tasks.
+The documentation in your report should explain how the parts of your prototype are related.
+This might be accomplished by including images of the sequence of task steps as performed using your prototype.
 
 This prototype has been informed by your prior sketching and storyboarding.
 But it also contains more details than your prior exploratory designs.
 If necessary or appropriate, revise your tasks or scenarios based on what you learn in prototyping.
 
 <InformalDrawingTool />
-If you use an informal drawing tool, you will have to print out a physical copy of your paper prototype.
+
+If you use an informal drawing tool,
+you will need to have physical copies of your paper prototype throughout upcoming milestones.
+You will also need the ability to quickly iterate on your paper prototype.
 
 #### Submission
 
