Style Consistency Fix

--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -387,7 +387,7 @@ so that you can easily present them to peers for critique.
 
 This milestone will be graded on a scale of __8 points__:
 
-1. __Each of 6 Tasks__: (1 point)
+1. __Each of 6 Tasks__: (6 x 1 points)
 2. __Clarity and Presentation__: (2 points)
 
 #### Samples of Prior Submissions
