--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -50,15 +50,17 @@ This is a group assignment, consisting of six milestones.
 The goal of this milestone is to develop an initial paper prototype that will begin to allow testing of your design.
 
 Develop a paper prototype for your design.
-It should convey all critical aspects of your design, including support for testing your two primary tasks.
-The prototype should be complete for each task,
-including enough detail to show how to complete each step in the task.
-This should include the desired / expected / intended path, but also likely error conditions
-(e.g., what happens if some participant input is invalid?).
-The prototype should be at an appropriate level of detail,
-supporting understanding of all critical aspects of your design and the context of the your primary tasks.
-The documentation in your report should explain how the parts of your prototype are related.
-This might be accomplished by including images of the sequence of task steps as performed using your prototype.
+It should convey critical components of your design, including support for testing your two primary tasks.
+
+- Include an overview image that shows your entire paper prototype.
+- The prototype should be complete for each task,
+  including enough detail to show how to complete each step in the task.
+  This should include the desired / expected / intended path, but also likely error conditions
+  (e.g., what happens if some participant input is invalid?).
+- The prototype should be at an appropriate level of detail,
+  supporting understanding of critical components of your design and the context of the your primary tasks.
+- The documentation in your report should explain how the components of your prototype are related.
+  This should include detailed images showing each component as you walk through your two primary tasks.
 
 This prototype has been informed by your prior sketching and storyboarding.
 But it also contains more details than your prior exploratory designs.
@@ -190,23 +192,36 @@ Your tasks and scenarios are likely stable, but revise them if your evaluation r
 
 Present your iterative revisions and your plan going forward:
 
-- Present a table or list of results from your inspection-based methods. For each identified issue, include:
-  - The heuristic that is violated or the believability issue identified in walkthrough.
+- Present a table or list of results from your inspection-based methods.
+  We expect you will report at least **four** identified issues and resulting revisions, which may be small or large.
+  For each identified issue, include:
+  - The heuristic that is violated.
   - A description of the usability issue, including an image of the relevant portion of the prototype.
   - A severity rating (ranging from 0 for _no problem_ to 4 for _usability catastrophe_).
   - An image and explanation of any revision implemented as a result.
 
-- Discuss your first usability test. Provide a description of the test, including the participant, the environment where you conducted the test,
-  why you chose this participant and environment, the test protocol, and the roles of each team member who participated in the test.
-  Discuss anything you learned about the testing process itself, or any revisions you decided you need to make to your testing process.
+- Discuss your first usability test.
+  - Provide a description of your testing method and participant
+    (e.g., the participant, the environment where you conducted the test,
+    why you chose this participant and environment, the test protocol,
+    and the roles of each team member who participated in the test).
+  - Discuss anything you learned about the testing process itself.
+    This should include at least one part of your method that was especially effective
+    or one revision you decided you need to make to your testing process.
 
-- Present a table or list of results from your first usability test. For each critical incident, include:
+- Present a table or list of results from your first usability test.
+  We expect you will report at least **two** identified incidents, which may be small or large.
+  For each critical incident, include:
   - An image of the relevant portion of the prototype.
   - Description of the incident, remembering that these can be either positive or negative.
   - For negative incidents, a severity rating (ranging from 0 for _no problem_ to 4 for _usability catastrophe_).
   - For negative incidents, an image and explanation of any revision implemented as a result.
 
-- Submit detailed images of your current paper prototype, as revised in this process. Include both:
+- Submit detailed images of your current paper prototype, as revised in this process.
+  Your design may have changed more or less based on your identified revisions,
+  so this is intended to fully convey the current state of your design.
+  As before, ensure your prototype is complete, is at an appropriate level of detail, and documents each task.
+  Include both:
   - An overview image that shows your entire paper prototype.
   - Detailed images showing each component as you walk through your two primary tasks.
 
@@ -248,10 +263,10 @@ You will need your paper prototype to conduct a usability test during section.
 
 #### Grading
 
-This milestone will be graded on a scale of __14 points__:
+This milestone will be graded on a scale of __13 points__:
 
 1. __Issues Identified from Inspection, Revisions Made in Response__: (4 points)
-2. __Discussion of Usability Test and Plan__: (3 points)
+2. __Discussion of Usability Test and Plan__: (2 points)
 3. __Issues Identified in Usability Test, Revisions Made in Response__: (2 points)
 4. __Updated Images of Paper Prototype__: (3 points)
 5. __Clarity and Presentation__: (2 points)
