--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -194,6 +194,7 @@ Present your iterative revisions and your plan going forward:
 
 - Present a table or list of results from your inspection-based methods.
   We expect you will report at least **four** identified issues and resulting revisions, which may be small or large.
+  You may report more, but this is the expected minimum.
   For each identified issue, include:
   - The heuristic that is violated.
   - A description of the usability issue, including an image of the relevant portion of the prototype.
@@ -211,6 +212,7 @@ Present your iterative revisions and your plan going forward:
 
 - Present a table or list of results from your first usability test.
   We expect you will report at least **two** identified incidents, which may be small or large.
+  You may report more, but this is the expected minimum.
   For each critical incident, include:
   - An image of the relevant portion of the prototype.
   - Description of the incident, remembering that these can be either positive or negative.
@@ -218,7 +220,7 @@ Present your iterative revisions and your plan going forward:
   - For negative incidents, an image and explanation of any revision implemented as a result.
 
 - Submit detailed images of your current paper prototype, as revised in this process.
-  Your design may have changed more or less based on your identified revisions,
+  Your design may have changed more or less,
   so this is intended to fully convey the current state of your design.
   As before, ensure your prototype is complete, is at an appropriate level of detail, and documents each task.
   Include both:
@@ -289,17 +291,31 @@ Complete a total of at least three usability tests and finalize your paper proto
 
 Present the results of your usability testing and your final paper prototype:
 
-- Discuss your three usability tests. Provide a description of each test, including the participant, the environment where you conducted the test,
-  why you chose this participant and environment, the test protocol, and the roles of each team member who participated in the test.
-  Briefly discuss revisions you made in your process and prototype over the course of your testing.
+- Discuss your three usability tests.
+  - Provide a description of your testing method and participant
+    (e.g., the participant, the environment where you conducted the test,
+    why you chose this participant and environment, the test protocol,
+    and the roles of each team member who participated in the test).
+  - Briefly discuss anything you learned about the testing process itself.
+    This should include at least one part of your method that was especially effective
+    or one revision you decided to make to your testing process.
 
-- Present a table or list of results from your three usability tests. For each critical incident, include:
+- Present a table or list of results from your three usability tests.
+  We expect you will report at least **three** identified incidents, which may be small or large.
+  You may report more, but this is the expected minimum.
+  This may include incidents you previously reported from your first usability test,
+  but may also be completely different in order to focus on the most important incidents you want to report.
+  For each critical incident, include:
   - An image of the relevant portion of the prototype.
   - Description of the incident, remembering that these can be either positive or negative.
   - For negative incidents, a severity rating (ranging from 0 for _no problem_ to 4 for _usability catastrophe_).
   - For negative incidents, an image and explanation of any revision implemented as a result.
 
-- Submit detailed images of your final paper prototype, as revised in this process. Include both:
+- Submit detailed images of your final paper prototype, as revised in this process.
+  Your design may have changed more or less,
+  so this is intended to fully convey the current state of your design.
+  As before, ensure your prototype is complete, is at an appropriate level of detail, and documents each task.
+  Include both:
   - An overview image that shows your entire paper prototype.
   - Detailed images showing each component as you walk through your two primary tasks.
 
@@ -310,6 +326,8 @@ Present the results of your usability testing and your final paper prototype:
 - Discuss at least one revision you made to promote inclusivity in your design.
   Describe an unintentional assumption you identified in your design,
   then describe how you revised your design to address this assumption.
+  If you are unable to identify this before this submission is due,
+  you may discuss this more in section and submit a revised assignment adding this.
 
 As you assemble this documentation of the iterative improvement of your design,
 you may find that some changes feel minor relative to the overhead of documenting those changes.
@@ -337,8 +355,8 @@ Submit via Canvas here:
 
 #### In Class
 
-Bring both a draft of your submission and your paper prototype to section.
-You will need your paper prototype to examine it for unintentional assumptions.
+Bring both your submission and your paper prototype to section.
+You will need your paper prototype for final critique.
 
 #### Grading
 
@@ -381,7 +399,7 @@ It should convey all critical aspects of your design, including walkthroughs for
 We have no strong preference regarding what digital tools you use to create your mockup.
 But it must be digital (e.g., you may not use pictures of a hand-drawn sketch).
 Some tools support creation of interactive mockups (e.g., allow clicking active regions to move between screens).
-You are welcome to use such a tool, and such interactivity may be helpful in your video.
+You are welcome to use such a tool, and such interactivity may be helpful.
 But interactive mockups are neither expected nor required.
 
 Figma is a widely-used web-based collaborative tool:
