--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -425,6 +425,8 @@ Present your digital mockup together with discussion of the decisions and change
   - Detailed images showing each component as you walk through your two primary tasks.
 
 - Discuss decisions and changes you made in implementing the digital mockup.
+  - Present a list of least **three** changes you made.
+  - Describe each change in a few sentences.
 
 As you assemble this documentation of the iterative improvement of your design,
 you may find that some changes feel minor relative to the overhead of documenting those changes.
@@ -433,7 +435,7 @@ Your goals in this documentation are to:
 - Show your work in the iterative design process, giving enough insight to understand your progress.
 - Capture a record to which you can return in preparing your web content and presentation.
 
-You may choose to not fully document minor changes, but be sure to document enough for these two goals.
+You may choose to not fully document minor changes, and you are only required to submit three, but be sure to document enough for these two goals.
 
 #### Submission
 
@@ -458,7 +460,7 @@ This milestone will be graded on a scale of __14 points__:
 
 1. __Overall Completeness and Appropriateness of Digital Mockup__: (3 points)
 2. __Completeness, Appropriateness, and Documentation of Each Task__: (2 x 3 points)
-3. __Discussion of Decisions and Changes in Implementation__: (3 points)
+3. __Discussion of Decisions and Changes in Implementation__: (3 x 1 points)
 4. __Clarity and Presentation__: (2 points)
 
 #### Samples of Prior Submissions
