--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -425,8 +425,10 @@ Present your digital mockup together with discussion of the decisions and change
   - Detailed images showing each component as you walk through your two primary tasks.
 
 - Discuss decisions and changes you made in implementing the digital mockup.
-  - Present a list of least **three** changes you made.
-  - Describe each change in a few sentences.
+  - We expect you will report at least **three** decisions or changes you made, which may be small or large.
+    You may report more, but this is the expected minimum.
+  - Describe each decision or change in a few sentences.
+    Include images to be sure it is easy to understand the decision or change.
 
 As you assemble this documentation of the iterative improvement of your design,
 you may find that some changes feel minor relative to the overhead of documenting those changes.
@@ -435,7 +437,7 @@ Your goals in this documentation are to:
 - Show your work in the iterative design process, giving enough insight to understand your progress.
 - Capture a record to which you can return in preparing your web content and presentation.
 
-You may choose to not fully document minor changes, and you are only required to submit three, but be sure to document enough for these two goals.
+You may choose to not fully document minor changes, but be sure to document enough for these two goals.
 
 #### Submission
 
