--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -4,6 +4,10 @@ import {
 
 import * as React from "react";
 
+import {CourseInformationLink} from "src/components/CourseInformation";
+import GeneratedLink from "src/common/GeneratedLink";
+
+
 import {
     CollapseProjectMilestone
 } from 'src/components/CollapseProjectMilestone';
@@ -25,7 +29,7 @@ import path4posterTemplate from '../../../assets/assignments/poster_template.ppt
 
 # Assignment 4: Communicating Your Design
 
-<Alert severity='error'>Content is Under Development and Subject to Change</Alert>
+{/* <Alert severity='error'>Content is Under Development and Subject to Change</Alert> */}
 
 ## Overview
 
@@ -38,9 +42,6 @@ a __web post__ and through a __poster__ with an associated __pitch__.
 
 This is a group assignment, consisting of five milestones.
 
-<Alert severity="error">TODO: SPLIT 4web INTO TWO PARTS</Alert>
-<Alert severity="error">TODO: UPDATE SUBMISSION OF 4web CONTENT</Alert>
-
 {/*
   *
   * ASSIGNMENT 4 Web
@@ -52,21 +53,22 @@ The goal of this milestone is to effectively communicate your design
 and your underlying design process in a post appropriate for a web portfolio.
 
 Prepare a post documenting your process of getting the right design and then getting the design right.
-Your post will be integrated into the course website via a Projects page,
+Your post will be integrated into the course website via the <GeneratedLink href={"/projects"}>Projects</GeneratedLink> page,
 used to both advertise the course poster session and to provide an archive of course projects.
 Your prior milestones provide significant content you can draw upon in this post,
 but this post is intended for an audience of future readers reviewing your design work.
 Not all content from prior milestones will be included,
-you may choose to update your prior work based on feedback received throughout your design process
+you should update your prior work based on feedback received throughout your design process
 (e.g., re-making a design sketch or storyboard for clarity in this communication),
 and you will ultimately emphasize a few key insights that most informed your design.
 
 Be sure that your post takes a tone of "presenting" and "reflecting" on your project.
 You are not "selling" the resulting design, but are instead "sharing" your work with an interested audience.
-You can and should express enthusiasm, but do not let that enthusiasm undermind the substance of your content.
+You can and should express enthusiasm, but do not let that enthusiasm undermine the substance of your content.
 
-Your post should follow the outline below, and you will also need to provide:
-(1) a project title, (2) a project thumbnail, and (3) an image and preferred name for each member of the project team.
+Your post should follow the outline below.
+It will be authored using Markdown and provided components for including images.
+Be sure to inspect and understand the template text provided in your project directory.
 
 1. __Title__
 
@@ -77,15 +79,19 @@ Your post should follow the outline below, and you will also need to provide:
    Provide a concise statement of the problem you are addressing and a brief introduction of your design.
 
    This might be a single paragraph or two short paragraphs.
-   You should likely include an image from or of your design to help serve as a "hook".
+   You should likely include an image from or of your design to help build interest.
    Your goal is to set a context and then to motivate a reader to want to continue to learn about your work.
 
 3. __Design Research Process and Key Insights__:
 
-   First provide a concise overview of your design research process in Assignment 2,
-   including the goals of your design research (i.e., your focus, your primary need for additional understanding),
-   the methods and participants you engaged in your design research,
-   and your rationale (i.e., why you chose your specific methods and participants).
+   _Design Research Process_
+
+   First provide a concise overview of your design research process in Assignment 2, including:
+
+   - The goals of your design research (i.e., your focus, your primary need for additional understanding).
+   - The methods and participants you engaged in your design research.
+   - Your rationale (i.e., why you chose your specific methods and participants).
+
    Your goal is to set a context for the insights this process revealed.
 
    This might be a single paragraph.
@@ -95,26 +101,31 @@ Your post should follow the outline below, and you will also need to provide:
    Then provide 3 key insights from your design research process in Assignment 2.
    Your goal is to convey key insights that informed your design and how each insight is based in your design process.
 
-   Each insight might be a single paragraph, perhaps with a descriptive heading.
-   For each insight, discuss how the insight emerged
-   (e.g., how your understanding was shaped by design research,
-   how your understanding was shaped by critique or feedback).
-   Use specific evidence whenever possible
-   (e.g., quotes or stories from participants,
-   pictures captured during observations,
-   pivots in your approach or thinking that resulted from critique or feedback,
-   key reasons you chose one design over alternatives,
-   key reasons you combined ideas from multiple design alternatives).
-   Do not number your insights (e.g., "Insight 1", "Insight 2", "Insight 3"),
-   but instead give them a descriptive title (e.g., "Minimizing Burden", "Creating Social Connections")
-   or consider that each paragraph could begin with a single bolded sentence summarizing the insight.
-   Use images as appropriate for conveying the insight (e.g., images from your design sketches or storyboards).
+   - For each insight, discuss how the insight emerged
+     (e.g., how your understanding was shaped by design research,
+     how your understanding was shaped by critique or feedback).
+     Use specific evidence whenever possible
+     (e.g., quotes or stories from participants,
+     pictures captured during observations,
+     pivots in your approach or thinking that resulted from critique or feedback,
+     key reasons you chose one design over alternatives,
+     key reasons you combined ideas from multiple design alternatives).
+   - Do not number your insights (e.g., "Insight 1", "Insight 2", "Insight 3"),
+     but instead give them a descriptive title (e.g., "Minimizing Burden", "Creating Social Connections")
+     or consider that each paragraph could begin with a single bolded sentence summarizing the insight.
+   - Use images as appropriate for conveying the insight (e.g., images from your design sketches or storyboards).
+
+   These might each be a single paragraph with a descriptive heading.
 
 4. __Iterative Design Process and Key Insights__:
 
-   First provide a concise overview of your iterative design process in Assignment 3,
-   including your design focus (i.e., the tasks on which you focused iterative design)
-   and process (e.g., your paper prototyping, inspection, usability testing, and digital mockup).
+   _Iterative Design Process_
+
+   First provide a concise overview of your iterative design process in Assignment 3, including:
+
+   - Your design focus (i.e., the tasks on which you focused iterative design).
+   - Your process (e.g., your paper prototyping, inspection, usability testing, and digital mockup).
+
    Your goal is to set a context for the insights this process revealed.
 
    This might be a single paragraph.
@@ -125,19 +136,20 @@ Your post should follow the outline below, and you will also need to provide:
    Then provide 3 key insights from your iterative design process in Assignment 3.
    Your goal is to convey key insights that informed your design and how each insight is based in your design process.
 
-   Each insight might be a single paragraph, perhaps with a descriptive heading.
-   For each insight, discuss how the insight emerged
-   (e.g., the state of a design element prior to the insight,
-   the activity, observation, critique, or feedback that prompted you to iterate upon a design element,
-   an aspect of transitioning to a digital mockup that required re-working your design)
-   and how you iterated upon the design in result
-   (e.g., showing a design element before and after an iteration).
-   Use specific evidence whenever possible
-   (e.g., quotes from or observations of participants.
-   Do not number your insights (e.g., "Insight 1", "Insight 2", "Insight 3"),
-   but instead give them a descriptive title (e.g., "Simplifying Data Collection", "Improving Legibility", "Removing Gender Assumptions")
-   or consider that each paragraph could begin with a single bolded sentence summarizing the insight.
-   Use images as appropriate for conveying the insight (e.g., images from your paper prototyping or digital mockup).
+   - For each insight, discuss how the insight emerged
+     (e.g., the state of a design element prior to the insight,
+     the activity, observation, critique, or feedback that prompted you to iterate upon a design element,
+     an aspect of transitioning to a digital mockup that required re-working your design)
+     and how you iterated upon the design in result
+     (e.g., showing a design element before and after an iteration).
+   - Use specific evidence whenever possible
+     (e.g., quotes from or observations of participants).
+   - Do not number your insights (e.g., "Insight 1", "Insight 2", "Insight 3"),
+     but instead give them a descriptive title (e.g., "Simplifying Data Collection", "Improving Legibility", "Removing Gender Assumptions")
+     or consider that each paragraph could begin with a single bolded sentence summarizing the insight.
+   - Use images as appropriate for conveying the insight (e.g., images from your paper prototyping or digital mockup).
+
+   These might each be a single paragraph with a descriptive heading.
 
 5. __Resulting Design__:
 
@@ -148,13 +160,6 @@ Your post should follow the outline below, and you will also need to provide:
 
    This section may primarily be a set of images,
    but be sure you organize those images with enough text for a reader to understand the resulting design.
-
-Ensure your post is appropriately clear and easy to read. This includes:
-
- - text should be clear and concise
- - use section headings and formatting as appropriate
- - include images in the body of the post
- - check for typos, spelling, and grammar errors
 
 #### Submission
 
@@ -172,25 +177,42 @@ Be sure:
 - <ContributionStatementReference />
 - <ParticipantAnonymity />
 
-Prepare this initial version of your web post in a Google Doc, submit a link to that document via Canvas here:
+Submit your post as a pull request against the course website GitHub repository:
+
+- <p><CourseInformationLink linkName='linkGitHub' /></p>
+
+- All edits included in your pull request should be contained within your provided project directory:
+
+  - Edit the provided `project_post.mdx` file with the contents of your post.
+  - Place images in the provided `assets` directories (i.e., for pictures of your team and for pictures used in your post).
+  - Replace the provided `project_thumb.png` with a 150x150 PNG to be used in linking to your project page.
+
+- You may submit multiple pull requests as you work on your post, and we will merge them as quickly as possible.
+
+- If a change is needed in the overall projects page or in the location of your project directory
+  (e.g., because you have changed your project name), contact and coordinate with the course staff.
+
+- In an emergency where you are unable to submit your convent via a pull request,
+  you may document the status of your post by emailing the staff a Zip archive of your project directory.
+  We will then work with you on posting your content.
+
+Submit your contribution statement via Canvas here:
 
 <p><AssignmentCanvasLink milestone={'assignment4web'} /></p>
 
-Be sure:
-
-- The document can be accessed for commenting by anybody with the link.
-- The document uses only simple formatting features (e.g., simple headings, a linear flow of content).
-  This is because the document will be converted into Markdown syntax as part of publishing:
-
-  [https://daringfireball.net/projects/markdown/syntax](https://daringfireball.net/projects/markdown/syntax)
-
 #### Grading
 
-This initial submission will be used for critique and feedback, but only the final version will be graded.
+Your post should be complete for critique and feedback, but only the final version will be graded.
+
+We will also be available to coordinate with you around integrating your post into the course website (e.g., any formatting issues).
 
 #### Samples of Prior Submissions
 
-This is a new assignment, in which we have:
+<Alert severity='warning'>
+    <div>Some samples are from a significantly revised prior milestone.</div>
+</Alert>
+
+This is a relatively new assignment, in which we have:
 
 1. Removed submission of a report after Assignment 2 and then again after Assignment 3.
 
@@ -198,8 +220,8 @@ This is a new assignment, in which we have:
 
 3. Structured that post to emphasize your distillation of a handful of key insights.
 
-Examples of reports from Assignment 2 and Assignment 3 are linked from projects in prior offerings,
-but be sure your submissions is designed for the new format and emphasis of this assignment:
+Examples of reports and posts are linked from projects in prior offerings,
+but be sure your submission is designed for the new format and emphasis of this assignment:
 
 Spring 2022 Projects: [https://courses.cs.washington.edu/courses/cse440/22sp/projects](https://courses.cs.washington.edu/courses/cse440/22sp/projects)
 
@@ -226,29 +248,6 @@ If you are unsure what revisions are appropriate, communicate with the course st
 
 #### Submission
 
-Author your post such that it conveys the necessary content while remaining easy to skim and read within approximately 7 minutes.
-We estimate posts will be between 1500 and 2000 words in length.
-
-Submit a single Zip archive file containing all of the files listed below.
-Do not upload files individually, as Canvas will mangle the names of your files.
-
-1. __Editable source of your web post__:
-   Obtained via the Google Docs "Download" "Microsoft Word" functionality.
-   Do not submit a PDF, as this will be much more difficult to move to the web.
-
-2. __Project thumbnail__:
-   A 150x150 image appropriate as a thumbnail for your project, named `project_thumb.png`.
-
-3. __An image and preferred name for each member of the project team__:
-   Similar to the images of the course staff on the overall course website,
-   these will be included in the page generated for your project.
-   Provide a file `names.txt` that includes how you want your names presented on the course website.
-   Then provide an appropriately named image for each member of the project team (e.g., `james.png`).
-
-4. __All images included in your post__:
-   Although these will also be included in your source file,
-   provide the original full-quality images for incorporation into your web post.
-
 Be sure:
 
 - <GroupAssignment />
@@ -260,7 +259,11 @@ Your post should be complete and will be evaluated as such.
 We will then coordinate with you around any modifications as we integrate your post into the course website
 (e.g., to correct any formatting issues).
 
-Submit via Canvas here:
+Update your post via one or more pull requests against the course website GitHub repository:
+
+- <p><CourseInformationLink linkName='linkGitHub' /></p>
+
+Submit your contribution statement via Canvas here:
 
 <p><AssignmentCanvasLink milestone={'assignment4web_final'} /></p>
 
