Correct "convent" typo

--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -192,7 +192,7 @@ Submit your post as a pull request against the course website GitHub repository:
 - If a change is needed in the overall projects page or in the location of your project directory
   (e.g., because you have changed your project name), contact and coordinate with the course staff.
 
-- In an emergency where you are unable to submit your convent via a pull request,
+- In an emergency where you are unable to submit your content via a pull request,
   you may document the status of your post by emailing the staff a Zip archive of your project directory.
   We will then work with you on posting your content.
 
