Updated Guidance on Building the Website

--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -181,6 +181,15 @@ Submit your post as a pull request against the course website GitHub repository:
 
 - <p><CourseInformationLink linkName='linkGitHub' /></p>
 
+- You will need to fork the course website, clone it to your local machine,
+  make and commit your edits, then eventually open a pull request to the course website,
+  which we will then merge and publish.
+
+- See the repository README.md for basic guidance on using `yarn dev_serve` to run a local build of the website.
+  This will dynamically update as you modify your content.
+
+- Prior to opening your pull request, use `yarn prod_build` to ensure that your code builds without errors.
+
 - All edits included in your pull request should be contained within your provided project directory:
 
   - Edit the provided `project_post.mdx` file with the contents of your post.
