--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -351,19 +351,7 @@ You will need these for in-class critique and revision.
 
 #### Grading
 
-This milestone will be graded on a scale of __10 points__:
-
-- __Content__: (5 points)
-  - Includes all of the key content listed above.
-  - Key functionality of the design is clear.
-  - Gives insight into the design process.
-- __Clarity and Presentation__: (5 points)
-  - Appropriately large images that convey key aspects of the design.
-  - Text is minimal and appropriate, large and legible.
-  - Colors and fonts are a pleasing combination and easy to read.
-
-Your poster should be complete and will be evaluated as such.
-Critique and refinement will help further improve it before a final version.
+Your poster should be complete for critique and feedback, but only the final version will be graded. Points will be deducted from the final poster score if this version is not complete enough to support feedback.
 
 #### Samples of Prior Submissions
 
@@ -415,7 +403,7 @@ This milestone will be graded on a scale of __10 points__:
   - Gives insight into the design process.
 - __Clarity and Presentation__: (5 points)
   - Appropriately large images that convey key aspects of the design.
-  - Test is minimal and appropriate, large and legible.
+  - Text is minimal and appropriate, large and legible.
   - Colors and fonts are a pleasing combination and easy to read.
 </CollapseProjectMilestone>
 
