--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -70,9 +70,11 @@ Your post should follow the outline below.
 It will be authored using Markdown and provided components for including images.
 Be sure to inspect and understand the template text provided in your project directory.
 
-1. __Title__
+1. __Title and Logo__
 
    A short, creative, and marketable title capturing the key idea.
+
+   An attractive project logo. It will be used to link to your project from the main projects page.
 
 2. __Problem and Design Overview__:
 
@@ -278,18 +280,21 @@ Submit your contribution statement via Canvas here:
 
 #### Grading
 
-The content for this post will be graded on a scale of __28 points__:
+The content for this post will be graded on a scale of __32 points__:
 
 1.  __Title__: (1 point)
-2.  __Project Thumbnail__: (1 point)
-2.  __Team Member Images and Names__: (1 points)
+2.  __Project Logo / Thumbnail__: (1 point)
+2.  __Team Member Images and Names__: (1 point)
 3.  __Problem and Design Overview__: (2 points)
 4.  __Design Research Process__: (2 points)
 5.  __Design Research Key Insights__: (3 x 2 points)
 6.  __Iterative Design Process__: (2 points)
 7.  __Iterative Design Key Insights__: (3 x 2 points)
 8.  __Resulting Design__: (3 points)
-10. __Clarity and Presentation__: (4 points)
+9.  __Clarity and Presentation__: (4 points)
+10. __Preparation and Process__: (4 points)
+    - Original post was sufficient to support critique and feedback.
+    - Appropriately act upon feedback to improve final poster.
 
 </CollapseProjectMilestone>
 
@@ -346,24 +351,15 @@ Submit via Canvas here:
 
 #### In Class
 
-Bring at least two 8.5"x11" printed copies of your poster to class (i.e., color prints on normal-sized paper).
-You will need these for in-class critique and revision.
+We will bring 8.5"x11" printed copies of your poster to class.
+You will need these for in-class critique and refinement.
 
 #### Grading
 
-This milestone will be graded on a scale of __10 points__:
+Your poster should be complete for critique and feedback, but only the final version will be graded.
+Note that grading of the final poster does allocate points to your sufficient preparation for critique and feedback.
 
-- __Content__: (5 points)
-  - Includes all of the key content listed above.
-  - Key functionality of the design is clear.
-  - Gives insight into the design process.
-- __Clarity and Presentation__: (5 points)
-  - Appropriately large images that convey key aspects of the design.
-  - Text is minimal and appropriate, large and legible.
-  - Colors and fonts are a pleasing combination and easy to read.
-
-Your poster should be complete and will be evaluated as such.
-Critique and refinement will help further improve it before a final version.
+Critique and refinement will help further improve your poster before a final version.
 
 #### Samples of Prior Submissions
 
@@ -407,7 +403,7 @@ We will then coordinate with you for proofreading and printing.
 
 #### Grading
 
-This milestone will be graded on a scale of __10 points__:
+This milestone will be graded on a scale of __12 points__:
 
 - __Content__: (5 points)
   - Includes all of the key content listed above.
@@ -415,8 +411,11 @@ This milestone will be graded on a scale of __10 points__:
   - Gives insight into the design process.
 - __Clarity and Presentation__: (5 points)
   - Appropriately large images that convey key aspects of the design.
-  - Test is minimal and appropriate, large and legible.
+  - Text is minimal and appropriate, large and legible.
   - Colors and fonts are a pleasing combination and easy to read.
+- __Preparation and Process__: (2 points)
+  - Original poster submission was sufficient to support critique and feedback.
+  - Appropriately act upon feedback to improve final poster.
 </CollapseProjectMilestone>
 
 {/*
@@ -432,6 +431,6 @@ and take the opportunity to discuss your work with classmates and visitors while
 
 #### Grading
 
-The poster session will be graded as part of participation.
+The poster session will be graded only as part of participation.
 We intentionally will not conduct any evaluation at the poster session itself.
 </CollapseProjectMilestone>
