--- a/src/pages/Projects.mdx
+++ b/src/pages/Projects.mdx
@@ -6,8 +6,8 @@ import ProjectCard from "src/components/ProjectCard";
 
 {/* PROJECTS */}
 
-import pathLogoBFRBreak from '../projects/bfrbreak/project_thumb.png';
 import pathLogoEmotiVerse from '../projects/emotiverse/project_thumb.png';
+import pathLogoFlutter from '../projects/flutter/project_thumb.png';
 import pathLogoGreenCloset from '../projects/greencloset/project_thumb.png';
 import pathLogoGymStar from '../projects/gymstar/project_thumb.png';
 import pathLogoHuddle from '../projects/huddle/project_thumb.png';
@@ -17,7 +17,7 @@ import pathLogoNomNom from '../projects/medisymp/project_thumb.png';
 import pathLogoOptimizeMe from '../projects/optimizeme/project_thumb.png';
 import pathLogoPenPal from '../projects/penpal/project_thumb.png';
 import pathLogoPinPal from '../projects/pinpal/project_thumb.png';
-import pathLogoSmartBoxer from '../projects/smartboxer/project_thumb.png';
+import pathLogoSkia from '../projects/skia/project_thumb.png';
 import pathLogoStrelmo from '../projects/strelmo/project_thumb.png';
 import pathLogoTheKiddeTable from '../projects/thekiddietable/project_thumb.png';
 import pathLogoTracne from '../projects/tracne/project_thumb.png';
@@ -40,11 +40,11 @@ can help go beyond simple data fetishes to help people in using personal data as
 <Grid container spacing={4}>
 
 <Grid item>
-<ProjectCard name="BFR-Break" logo={pathLogoBFRBreak} path="bfrbreak" />
+<ProjectCard name="EmotiVerse" logo={pathLogoEmotiVerse} path="emotiverse" />
 </Grid>
 
 <Grid item>
-<ProjectCard name="EmotiVerse" logo={pathLogoEmotiVerse} path="emotiverse" />
+<ProjectCard name="Flutter" logo={pathLogoFlutter} path="flutter" />
 </Grid>
 
 <Grid item>
@@ -84,7 +84,7 @@ can help go beyond simple data fetishes to help people in using personal data as
 </Grid>
 
 <Grid item>
-<ProjectCard name="SmartBoxer" logo={pathLogoSmartBoxer} path="smartboxer" />
+<ProjectCard name="Skiá" logo={pathLogoSkia} path="skia" />
 </Grid>
 
 <Grid item>
