Fix type on A4 Web

--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -61,7 +61,7 @@ Not all content from prior milestones will be included,
 you should update your prior work based on feedback received throughout your design process
 (e.g., re-making a design sketch or storyboard for clarity in this communication),
 and you will ultimately emphasize a few key insights that most informed your design.
-Make sure any images you include are clear (e.g., storyboards). If they are not clear, you should redraw them.
+Make sure any images you include are clear. If they are not clear, you should redraw/remake them.
 
 Be sure that your post takes a tone of "presenting" and "reflecting" on your project.
 You are not "selling" the resulting design, but are instead "sharing" your work with an interested audience.
