Update Re-Make Image Text

--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -61,7 +61,11 @@ Not all content from prior milestones will be included,
 you should update your prior work based on feedback received throughout your design process
 (e.g., re-making a design sketch or storyboard for clarity in this communication),
 and you will ultimately emphasize a few key insights that most informed your design.
-Make sure any images you include are clear. If they are not clear, you should redraw/remake them.
+
+Make sure all images you include are clear and legible (e.g., with appropriate contrast).
+Re-make images as necessary to ensure this
+(e.g., by taking new photos in better lighting, by instead using a scanner,
+by re-creating a piece of a paper prototype using ink that will create a better image).
 
 Be sure that your post takes a tone of "presenting" and "reflecting" on your project.
 You are not "selling" the resulting design, but are instead "sharing" your work with an interested audience.
@@ -327,6 +331,11 @@ A PowerPoint template is available here:
 <p><a href={path4posterTemplate}>poster_template.pptx</a></p>
 
 You should heavily modify the template to be unique and represent your project.
+
+Make sure all images you include are clear and legible (e.g., with appropriate contrast).
+Re-make images as necessary to ensure this
+(e.g., by taking new photos in better lighting, by instead using a scanner,
+by re-creating a piece of a paper prototype using ink that will create a better image).
 
 During the final poster session, your team will give a one minute pitch to a small group of judges.
 Create a pitch that summarizes the problem and your design.
